# efm32hg222f64-hal

./: .gitignore  Cargo.toml  README.md  memory.x
.cargo/: config
examples/: blinky.rs
src/: delay.rs  gpio.rs  lib.rs
